tools/tests/errors/circular_import_b.ki
var a = import("circular_import_a")
var y = 2
